unpackaged/main/default/objects/Asset/fields/ESN_MSN__c.field-meta.xml
<CustomField>
    <fullName>ESN_MSN__c</fullName>
    <label>ESN/MSN</label>
    <length>128</length>
    <type>Text</type>
</CustomField>