unpackaged/main/default/objects/Asset/fields/Owner_Category__c.field-meta.xml
<CustomField>
    <fullName>Owner_Category__c</fullName>
    <label>Owner Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lessor</fullName>
            </value>
            <value>
                <fullName>Airline</fullName>
            </value>
            <value>
                <fullName>Trader</fullName>
            </value>
            <value>
                <fullName>Financier</fullName>
            </value>
            <value>
                <fullName>MRO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>