unpackaged/main/default/objects/Asset/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A319</fullName>
            </value>
            <value>
                <fullName>A320</fullName>
            </value>
            <value>
                <fullName>A330</fullName>
            </value>
            <value>
                <fullName>A340</fullName>
            </value>
            <value>
                <fullName>A350</fullName>
            </value>
            <value>
                <fullName>A380</fullName>
            </value>
            <value>
                <fullName>ATR 42</fullName>
            </value>
            <value>
                <fullName>ATR 72</fullName>
            </value>
            <value>
                <fullName>B737</fullName>
            </value>
            <value>
                <fullName>B737MAX</fullName>
            </value>
            <value>
                <fullName>B747</fullName>
            </value>
            <value>
                <fullName>B757</fullName>
            </value>
            <value>
                <fullName>B767</fullName>
            </value>
            <value>
                <fullName>B777</fullName>
            </value>
            <value>
                <fullName>B787</fullName>
            </value>
            <value>
                <fullName>CF34</fullName>
            </value>
            <value>
                <fullName>CF6</fullName>
            </value>
            <value>
                <fullName>CFM56</fullName>
            </value>
            <value>
                <fullName>E175</fullName>
            </value>
            <value>
                <fullName>E190</fullName>
            </value>
            <value>
                <fullName>GE90</fullName>
            </value>
            <value>
                <fullName>PW2000</fullName>
            </value>
            <value>
                <fullName>PW4000</fullName>
            </value>
            <value>
                <fullName>Q400</fullName>
            </value>
            <value>
                <fullName>RB211</fullName>
            </value>
            <value>
                <fullName>Trent 700</fullName>
            </value>
            <value>
                <fullName>TRENT 772B</fullName>
            </value>
            <value>
                <fullName>Trent 800</fullName>
            </value>
            <value>
                <fullName>V2500</fullName>
            </value>
            <value>
                <fullName>DHC8-400</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>