unpackaged/main/default/objects/Asset/recordTypes/Airframe.recordType-meta.xml
<RecordType>
    <fullName>Airframe</fullName>
    <active>true</active>
    <label>Airframe</label>
</RecordType>