unpackaged/main/default/objects/Asset/listViews/All_Assets.listView-meta.xml
<ListView>
    <fullName>All_Assets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ESN_MSN__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>ASSET.RECORDTYPE</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <columns>Owner_Category__c</columns>
    <columns>Platform__c</columns>
    <columns>ASSET.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Assets</label>
</ListView>