unpackaged/main/default/objects/Asset/listViews/All_Engine_Assets.listView-meta.xml
<ListView>
    <fullName>All_Engine_Assets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ESN_MSN__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>ASSET.RECORDTYPE</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <columns>Owner_Category__c</columns>
    <columns>Platform__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset.inscor__Engine</value>
    </filters>
    <label>All Engine Assets</label>
</ListView>